--- a/.github/workflows/staging_tfsec.yml
+++ b/.github/workflows/staging_tfsec.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           tflint --init
           tflint -f compact
-        working-directory: ./terraform/able
+        working-directory: ./terraform/alb
 
       - name: Init and Run TFLint for 'webserver' directory
         run: |
