--- a/.github/workflows/staging_deploy.yml
+++ b/.github/workflows/staging_deploy.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       matrix:
         directory:
-          - terraform/able
+          - terraform/alb
           - terraform/webserver
           - terraform/network
           # Add other directories as needed
