--- a/.github/workflows/staging_deploy.yml
+++ b/.github/workflows/staging_deploy.yml
@@ -5,13 +5,13 @@ on:
     branches:
     - prod
     paths:
-    - staging/**
+    - terraform/**/*
 
   pull_request:
     branches:
     - prod
     paths: 
-    - staging/**
+    - terraform/**/*
 
 permissions:
   contents: read
@@ -31,7 +31,7 @@ jobs:
           - terraform/network
           # Add other directories as needed
     env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      AWS_GITHUB_TOKEN: ${{ secrets.AWS_GITHUB_TOKEN }}
       AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }}
