--- a/.github/workflows/staging_deploy.yml
+++ b/.github/workflows/staging_deploy.yml
@@ -1,27 +1,27 @@
 name: "Terraform - From Staging"
 # https://gaunacode.com/deploying-terraform-at-scale-with-github-actions
-# on:
-#   push:
-#     branches:
-#     - prod
-#     paths:
-#     - terraform/**/*
-
-#   pull_request:
-#     branches:
-#     - prod
-#     paths: 
-#     - terraform/**/*
-
 on:
   push:
-    branches: ["staging"]
-    paths: 
+    branches:
+    - prod
+    paths:
     - terraform/**/*
+
   pull_request:
-    branches: [ "prod" ]
+    branches:
+    - prod
     paths: 
     - terraform/**/*
+
+# on:
+#   push:
+#     branches: ["staging"]
+#     paths: 
+#     - terraform/**/*
+#   pull_request:
+#     branches: [ "prod" ]
+#     paths: 
+#     - terraform/**/*
 
 permissions:
   contents: read
