--- a/.github/workflows/staging_deploy.yml
+++ b/.github/workflows/staging_deploy.yml
@@ -1,4 +1,4 @@
-name: "Terraform - From Staging"
+name: "Terraform Deploy"
 # https://gaunacode.com/deploying-terraform-at-scale-with-github-actions
 on:
   push:
@@ -13,16 +13,6 @@ on:
     paths: 
     - terraform/**/*
 
-# on:
-#   push:
-#     branches: ["staging"]
-#     paths: 
-#     - terraform/**/*
-#   pull_request:
-#     branches: [ "prod" ]
-#     paths: 
-#     - terraform/**/*
-
 permissions:
   contents: read
   pull-requests: write
@@ -32,6 +22,13 @@ jobs:
     name: "Terraform"
     runs-on: ubuntu-latest
     environment: staging
+    strategy:
+      matrix:
+        directory:
+          - terraform/alb
+          - terraform/webservers
+          - terraform/network
+          # Add other directories as needed
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -52,26 +49,25 @@ jobs:
         id: fmt
         run: terraform fmt 
         continue-on-error: true
-        working-directory: ./terraform/network
+        working-directory: ${{ matrix.directory }}
 
 
       - name: Terraform Init
         id: init
         run: terraform init
-        working-directory: ./terraform/network
+        working-directory: ${{ matrix.directory }}
 
            
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
-        working-directory: ./terraform/network
+        working-directory: ${{ matrix.directory }}
 
     
       - name: Terraform Plan
         id: plan
         run: terraform plan -input=false -no-color -out tf.plan
-        working-directory: ./terraform/network
-        # working-directory: ./staging # Use your environment folder
+        working-directory: ${{ matrix.directory }}
         continue-on-error: true
 
       - name: Get result
@@ -80,8 +76,7 @@ jobs:
       - name: Terraform Show
         id: show
         run: terraform show -no-color tf.plan 2>&1 > /tmp/plan.txt
-        working-directory: ./terraform/network
-        # working-directory: ./staging # Use your environment folder
+        working-directory: ${{ matrix.directory }}
           
       - uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
@@ -126,8 +121,7 @@ jobs:
       - name: Terraform Apply
         if: github.ref == 'refs/heads/prod' && github.event_name == 'push'
         run: terraform apply -input=false tf.plan
-        working-directory: ./terraform/network
-        # working-directory: ./staging # Use your environment folder
+        working-directory: ${{ matrix.directory }}
         shell: bash
         
 
