--- a/.github/workflows/staging_deploy.yml
+++ b/.github/workflows/staging_deploy.yml
@@ -18,19 +18,12 @@ permissions:
   pull-requests: write
 
 jobs:
-  terraform:
-    name: "Terraform"
+  terraform-network:
+    name: "Terraform Network Deployment"
     runs-on: ubuntu-latest
     environment: staging
-    strategy:
-      matrix:
-        directory:
-          - terraform/network
-          - terraform/webservers
-          - terraform/alb
-          # Add other directories as needed
     env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.AWS_GITHUB_TOKEN }}
       AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }}
@@ -46,33 +39,29 @@ jobs:
           terraform_version: 1.1.9
           terraform_wrapper: true
 
-      - name: Create SSH Key File
-        run: echo "${{ secrets.PROJECT_KEYPAIR_PUB }}" > project_keypair.pub
-        working-directory: ./terraform/webservers
-
       - name: Terraform fmt
         id: fmt
         run: terraform fmt 
         continue-on-error: true
-        working-directory: ${{ matrix.directory }}
+        working-directory: ./terraform
 
 
       - name: Terraform Init
         id: init
         run: terraform init
-        working-directory: ${{ matrix.directory }}
+        working-directory: ./terraform
 
            
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
-        working-directory: ${{ matrix.directory }}
+        working-directory: ./terraform
 
     
       - name: Terraform Plan
         id: plan
         run: terraform plan -input=false -no-color -out tf.plan
-        working-directory: ${{ matrix.directory }}
+        working-directory: ./terraform
         continue-on-error: true
 
       - name: Get result
@@ -81,12 +70,12 @@ jobs:
       - name: Terraform Show
         id: show
         run: terraform show -no-color tf.plan 2>&1 > /tmp/plan.txt
-        working-directory: ${{ matrix.directory }}
+        working-directory: ./terraform
           
       - uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.AWS_GITHUB_TOKEN }}
           script: |
             const fs = require("fs");
             const plan = fs.readFileSync("/tmp/plan.txt", "utf8");
@@ -126,9 +115,8 @@ jobs:
       - name: Terraform Apply
         if: github.ref == 'refs/heads/prod' && github.event_name == 'push'
         run: terraform apply -input=false tf.plan
-        working-directory: ${{ matrix.directory }}
+        working-directory: ./terraform
         shell: bash
-        
 
 
 
@@ -144,44 +132,37 @@ jobs:
 
 
 
-# name: "Terraform - Staging"
-# # https://gaunacode.com/deploying-terraform-at-scale-with-github-actions
-# on:
-#   push:
-#     branches:
-#     - prod
-#     paths:
-#     - terraform/**/*
 
-#   pull_request:
-#     branches:
-#     - prod
-#     paths: 
-#     - terraform/**/*
 
-# permissions:
-#   contents: read
-#   pull-requests: write
 
-# jobs:
-#   terraform:
-#     name: "Terraform"
+
+
+
+
+
+
+
+
+
+
+
+#   terraform-network:
+#     name: "Terraform Network Deployment"
 #     runs-on: ubuntu-latest
 #     environment: staging
-#     # Edited Kusal
 #     strategy:
 #       matrix:
 #         directory:
-#           - terraform/alb
-#           - terraform/webservers
 #           - terraform/network
+#           - terraform/webservers
+#           - terraform/alb
 #           # Add other directories as needed
 #     env:
-#       AWS_GITHUB_TOKEN: ${{ secrets.AWS_GITHUB_TOKEN }}
+#       GITHUB_TOKEN: ${{ secrets.AWS_GITHUB_TOKEN }}
 #       AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
 #       AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 #       AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }}
-
+#       PROJECT_KEYPAIR_PUB: ${{ secrets.PROJECT_KEYPAIR_PUB }}
 #     steps:
 #       - name: Checkout
 #         uses: actions/checkout@v3
@@ -191,6 +172,10 @@ jobs:
 #         with:
 #           terraform_version: 1.1.9
 #           terraform_wrapper: true
+
+#       - name: Create SSH Key File
+#         run: echo "${{ secrets.PROJECT_KEYPAIR_PUB }}" > project_keypair.pub
+#         working-directory: ./terraform/webservers
 
 #       - name: Terraform fmt
 #         id: fmt
@@ -270,4 +255,38 @@ jobs:
 #         run: terraform apply -input=false tf.plan
 #         working-directory: ${{ matrix.directory }}
 #         shell: bash
-        
+
+#   ansible:
+#     name: Execute Ansible Playbook
+#     needs: terraform
+#     environment: staging
+#     env:
+#       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+#       AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#       AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }}
+#       PROJECT_KEYPAIR_PUB: ${{ secrets.PROJECT_KEYPAIR_PUB }}
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v2
+
+#     - name: Set up Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: '3.x'
+
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install boto3 ansible
+
+#     - name: Configure AWS credentials
+#       uses: aws-actions/configure-aws-credentials@v1
+#       with:
+#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#         aws-region: "us-east-1"
+
+#     - name: Run Ansible playbook
+#       run: ansible-playbook -i aws_ec2.yml webserver_playbook.yaml
