--- a/.github/workflows/staging_deploy.yml
+++ b/.github/workflows/staging_deploy.yml
@@ -43,25 +43,25 @@ jobs:
         id: fmt
         run: terraform fmt 
         continue-on-error: true
-        working-directory: ./terraform
+        working-directory: ./terraform/network
 
 
       - name: Terraform Init
         id: init
         run: terraform init
-        working-directory: ./terraform
+        working-directory: ./terraform/network
 
            
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
-        working-directory: ./terraform
+        working-directory: ./terraform/network
 
     
       - name: Terraform Plan
         id: plan
         run: terraform plan -input=false -no-color -out tf.plan
-        working-directory: ./terraform
+        working-directory: ./terraform/network
         continue-on-error: true
 
       - name: Get result
@@ -70,7 +70,7 @@ jobs:
       - name: Terraform Show
         id: show
         run: terraform show -no-color tf.plan 2>&1 > /tmp/plan.txt
-        working-directory: ./terraform
+        working-directory: ./terraform/network
           
       - uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
@@ -115,7 +115,7 @@ jobs:
       - name: Terraform Apply
         if: github.ref == 'refs/heads/prod' && github.event_name == 'push'
         run: terraform apply -input=false tf.plan
-        working-directory: ./terraform
+        working-directory: ./terraform/network
         shell: bash
 
 
