Update Teeraform Code and Github Workflows Code

--- a/.github/workflows/staging_deploy.yml
+++ b/.github/workflows/staging_deploy.yml
@@ -320,7 +320,7 @@ jobs:
 
   ansible:
     name: Execute Ansible Playbook
-    needs: terraform
+    needs: [terraform-network, terraform-webservers]
     environment: staging
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
