Update Teeraform Code and Github Workflows Code 2

--- a/.github/workflows/staging_deploy.yml
+++ b/.github/workflows/staging_deploy.yml
@@ -352,4 +352,5 @@ jobs:
         aws-region: "us-east-1"
 
     - name: Run Ansible playbook
+      working-directory: ./ansible
       run: ansible-playbook -i aws_ec2.yaml webserver_playbook.yaml -l ansible
