--- a/.github/workflows/staging_deploy.yml
+++ b/.github/workflows/staging_deploy.yml
@@ -1,6 +1,12 @@
 name: "Terraform Deploy"
 # https://gaunacode.com/deploying-terraform-at-scale-with-github-actions
 on:
+  push:
+    branches:
+    - prod
+    paths:
+    - terraform/**/*
+    
   pull_request:
     branches:
     - prod
